--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>first commit</title>
 </head>
 <body>
-    <h1>initial commit </h1> 
+    <h1>initial commit </h1>
+    <h2> hiii... </h2>
 </body>
 </html>
